--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       display: none;
       justify-content: center;
       align-items: center;
+      margin-inline: 2rem;
       height: 100vh;
     }
   </style>
@@ -42,7 +43,7 @@
       setTimeout(() => {
         const canvas = document.querySelector("#defaultCanvas0");
         canvas.style.display = "none";
-      }, 2000);
+      }, 2500);
     }
   </script>
 </html>
