--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,48 @@
       margin-inline: 2rem;
       height: 100vh;
     }
+    .dialog-container {
+      position: fixed;
+      background: #ffffff90;
+      backdrop-filter: blur(1rem);
+      width: 100%;
+      z-index: 99;
+      top: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .show-again-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .start-screen-header {
+      text-align: center;
+      font-size: 2rem;
+      font-weight: bold;
+    }
   </style>
   <body>
     <div class="min-window-width-error" id="minWindowWidthError">
       Sorry the game can't be played on mobile, switch to a desktop screen
     </div>
   </body>
+  <script>
+    let minWidthError = false;
+    const MIN_WINDOW_WIDTH = 700;
+
+    if (window.innerWidth <= MIN_WINDOW_WIDTH) {
+      minWidthError = true;
+      document.querySelector("#minWindowWidthError").style.display = "flex";
+      setTimeout(() => {
+        const canvas = document.querySelector("#defaultCanvas0");
+        canvas.style.display = "none";
+      }, 2500);
+    }
+  </script>
   <script src="./js/variables.js"></script>
   <script src="./js/state.js"></script>
   <script src="./js/bullet.js"></script>
@@ -35,15 +71,4 @@
   <script src="./js/gifts.js"></script>
   <script src="./js/handlers.js"></script>
   <script src="./js/sketch.js"></script>
-  <script>
-    const MIN_WINDOW_WIDTH = 700;
-
-    if (window.innerWidth <= MIN_WINDOW_WIDTH) {
-      document.querySelector("#minWindowWidthError").style.display = "flex";
-      setTimeout(() => {
-        const canvas = document.querySelector("#defaultCanvas0");
-        canvas.style.display = "none";
-      }, 2500);
-    }
-  </script>
 </html>
