Refactoring the handlers and the ui

--- a/public/index.html
+++ b/public/index.html
@@ -70,5 +70,6 @@
   <script src="./js/enemy.js"></script>
   <script src="./js/gifts.js"></script>
   <script src="./js/handlers.js"></script>
+  <script src="./js/ui.js"></script>
   <script src="./js/sketch.js"></script>
 </html>
